--- a/Exam_maket/aboutus.html
+++ b/Exam_maket/aboutus.html
@@ -18,12 +18,118 @@
 				 <div class="content">
 					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
 					 <nav>
-						 <a href="#" class="chosen">главная</a>
-						 <a href="aboutus.html">о нас</a>
-						 <a href="classes.html">виды</a>
-						 <a href="gallery.html">фотогалерея</a>
-						 <a href="contacts.html">контакты</a>
+						<a href="index.html">главная</a>
+						<a href="aboutus.html" class="chosen">о нас</a>
+						<a href="vidy.html">виды</a>
+						<a href="fotogalereya.html">фотогалерея</a>
+						<a href="kontakty.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
 				 </div><!-- .content -->
 			</header>
+			<div class="content">
+				<div class="baseinfo">
+				<h2 class="dashed">наша команда</h2>
+				<p class="description"> На пути йоги очень важен знающий проводник, и этим проводником должен стать ваш преподаватель. Очень важно найти именно "своего" человека, с которым Вам приятно работать и хочется продолжать и углублять практику.</p>
+				</div><!-- .baseinfo-->
+				<div class="sectioncontainer"><a name="teacher1"></a>
+					<div class="mainsection">
+						<div class="textblock">
+							<img src="img/yogateacherKirillButko.jpg" class="positionleft" alt="kirill butko" title="kirill butko">
+							<h3>Кирилл Бутко</h3>
+							<h4>Сертифицированный преподаватель и основатель студии йоги "Mindbody"</h4>
+							<p class="short">Кирилл начал заниматься йогой около 20 лет назад - сначала сам, затем в группах под руководством отечественных преподавателей - Евгения Быстрова, Виктора Шапокляк, Александра Сутронога и Ирины Зорькиной.</p>
+							<p class="short">C 1993 года ежегодно участвует в выездных семинарах, проводимых иностранными учителями йоги. Стаж предподавания йоги в группах - более 10 лет. Также обладает прекрасными навыками и техниками проведения аюрведического массажа.</p><a name="teacher2"></a>
+							<div class="clear"></div>
+						</div><!-- .textblock-->
+						<div class="textblock">
+							<img src="img/yogateacherMariyaBelskaya.jpg" class="positionleft" alt="mariya belskaya" title="mariya belskaya">
+							<h3>Мария Бельская</h3>
+							<h4>Сертифицированный преподаватель хатха-йоги, йоги для детей и подростков</h4>
+							<p class="short">Более 10 лет занимается Хатха йогой, вопросами самопознания и саморазвития, психофизической саморегуляцией. Является ученицей Школы самопознания «ВНЕО». С 2000 г. является участником тренингов и семинаров, проходящих в Минске, Москве, Санкт-Петербурге и др. На своих занятиях Елена помогает своим ученикам получить бесценный опыт устойчивого и управляемого внимания, обучает их основам релаксации и глубинного покоя. В результате такого подхода, ученики получают возможность продлевать состояние общего психофизического равновесия в повседневную жизнь. Обладает большим опытом и способностью работать в детских группах, в чем немало помогает первое педагогическое образование.</p><a name="teacher3"></a>
+							<div class="clear"></div>
+						</div><!-- .textblock-->
+						<div class="textblock">
+							<img src="img/yogateacherViktoriyaKruk.jpg" class="positionleft" alt="viktoriya kruk" title="viktoriya kruk">
+							<h3>Виктория Крук</h3>
+							<h4>Сертифицированный преподаватель йоги с медицинским образованием</h4> 
+							<p class="short">Виктория имеет высшее медицинское образование (Минский медицинский инстутут). Первая врачебная категория. Опыт работы в педиатрии, интенсивной терапии, стаж работы - более 10 лет. 
+							Первоначальный интерес к йоге возник давно, в начале 90-х годов, и был связан, в основном, с ее целительным воздействием на организм человека. И в результате личной практики Виктория избавилась от нескольких хронических заболеваний. Виктория ведет занятия по йога-терапии, преподает йогу для беременных, женский класс, помогая выстроить практику, исходя из физиологических особенностей каждого ученика. Она является одним из преподавателей, работающих с подростками, имеющими серьезные нарушения в осанке. 
+							<div class="clear"></div>
+						</div><!-- .textblock-->
+						<div class="textblock"><a name="teacher4"></a>
+							<img src="img/yogateacherEvgeniyaKrishnaitova.jpg" class="positionleft" alt="evgeniya krishnaitova" title="evgeniya krishnaitova">
+							<h3>Евгения Кришнаитова</h3>
+							<h4>Сертифицированный преподаватель йоги, опытный психолог</h4>
+							<p class="short">Евгения начала практиковать йогу в 1999 году под руководством опытного йога-преподавателя и инструктора Екатерины Мельниковой.  С тех пор она практиковала йогу самостоятельно и в группах, поcещала семинары по йоге Айенгара. С 2006 года начала преподавать взрослую и детскую йогу самостоятельно и в группах.</p>
+							<p class="short">Будучи практикующим психологом, Катерина помогает своим ученикам применять йогические знания в жизни, такие как: контроль эмоциональных состояний, самообладание в критических ситуациях, работа с самооценкой, работа с эго, повышение осознанности, способствование духовному росту, работа с отношением учеников к жизненным переменам.</p>
+							<div class="clear"></div>
+						</div><!-- .textblock-->
+					</div><!-- .mainsection-->
+					<div class="minorsection">
+						<ul>
+							<li class="mainli">
+								<p class="head">практика йоги: начало.</p>
+								<p class="link"><a href="http://yogastudio.by/yoga_beginning.html" class="maina" target=_blank>Если вы никогда не занимались йогой, обратите внимание на предлагаемые советы, они сделают ваше знакомство с йогой легким, понятным и приятным.</a></p>
+							</li>
+							<li class="mainli">
+								<p class="head">йога: комплект для практики</p>
+								<p class="link"><a href="http://yogastudio.by/komplekt_dlya_praktiki.html" class="maina" target=_blank>Прежде всего, для занятий йогой необходимо приобрести собственный коврик. Во-первых, это гигиенично, во-вторых, каждая личная вещь хранит и накапливает энергетику владельца.</a></p>
+							</li>
+							<li class="mainli">
+								<p class="head">йога-туры: что это и зачем</p>
+								<p class="link"><a href="http://yogastudio.by/yogatour_eto.html" class="maina" target=_blank>Каждый человек иногда пребывает в состоянии стресса и испытывает напряжение и усталость. Он нуждается в психологическом отдыхе и эмоциональной разгрузке. Поспособствовать улучшению телесного и душевного здоровья могут йога-туры.</a></p>
+							</li>
+							<li class="mainli">
+								<p class="head">основные асаны хатха-йоги</p>
+								<p class="link"><a href="http://yogastudio.by/asani-hatha-yogi.html" class="maina" target=_blank>Асана - это устойчивое и комфортное положение тела, воздействующее на мускулы, нервы и железы организма. Они укрепляют тело и предохраняют его от болезней, снимают усталость и успокаивают нервы. Но их главное значение&mdash;в тренировке и дисциплине ума.</a></p>
+							</li>
+							<li class="mainli">
+								<p class="head">комплексы хатха-йоги</p>
+								<p class="link"><a href="http://yogastudio.by/komplexi-hatha-yogi.html" class="maina" target=_blank>В хатха-йоге существуют специальные комплексы упражнений, направленные на проработку определенных частей тела, работу с энергетическиими центрами, укрепление мышц или раскрытие суставов.</a></p>
+							</li>
+							<li class="mainli">
+								<p class="head">бандхи (замки)</p>
+								<p class="link"><a href="http://yogastudio.by/bandhi.html" class="maina" target=_blank>Бандхи - это небольшая, но очень важная группа йоговских упражнений. Слово "бандха" означает «держать, удерживать, привязывать». Замки позволяют практикующему управлять различными органами и нервами тела.</a></p>
+							</li>
+						</ul>
+					</div>
+					<div class="clear"></div>
+				</div>
+			</div><!-- .content -->
+			<footer>
+				<div class="line"></div>
+				<div class="content">
+					<div class="shortinfo">
+						<h3 class="white">О нас</h3>
+						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Реквизиты</h3>
+						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
+							УНП: 00000000<br>
+							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
+							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
+							Банк: BY43BPSB30123273720179330000</p>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Рассылка</h3>
+						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
+						<form method=post action='https://www.it-academy.by/'>
+							<input type="text" style="color:rgb(166,175,176); background-color: white; text-align: center;" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit" style="text-align: center;">Подписаться</button>
+						</form>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Контакты</h3>
+						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
+						<ul>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
+						</ul>
+					</div><!-- .shortinfo -->
+					<div class="clear"></div>
+				</div><!-- .content -->		
+			</footer>	
+</body>
+</html>
