--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -18,11 +18,11 @@
 				 <div class="content">
 					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
 					 <nav>
-						 <a href="#" class="chosen">главная</a>
+						 <a href="index.html" class="chosen">главная</a>
 						 <a href="aboutus.html">о нас</a>
-						 <a href="classes.html">виды</a>
-						 <a href="gallery.html">фотогалерея</a>
-						 <a href="contacts.html">контакты</a>
+						 <a href="vidy.html">виды</a>
+						 <a href="fotogalereya.html">фотогалерея</a>
+						 <a href="kontakty.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
 				 </div><!-- .content -->
@@ -30,7 +30,6 @@
 			<div class="advert">
 				<div class="banner">
 					<img src="images/banner.jpg" alt="banner" style="width:100%;">
-				</div>
 				<div class="content">
 					<h3 style="color: black;">Тротуарная плитка</h3>
 					<p style="color: black;">Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить отличную возможность приобрести современные модели с высокими показателями эстетики и механической стойкости напрямую от производителя – компании «Мастер Строй».</p>
@@ -40,25 +39,26 @@
 			<div class="services">
 				<div class="content">
 					<h2 class="dashed" style="color: black;">Виды</h2>
-					<p class="description">В современном ландшафтном дизайне используются изделия, которые делают участок более привлекательным и функциональным. Для выкладки садовых и пешеходных дорожек применяют различные виды тротуарной плитки.</p>
+					<p class="description" style="color: black;">В современном ландшафтном дизайне используются изделия, которые делают участок более привлекательным и функциональным. Для выкладки садовых и пешеходных дорожек применяют различные виды тротуарной плитки.</p>
 					<div class="classtype">
 						<div class="type">
-							<h3>H3</h3>
-							<a href="classes.html#hathayoga" target=_blank><img src="img/hatha.jpg" title="hathayoga" alt="prenatalyoga"></a>
-							<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis enim sint ratione quod aliquid sequi suscipit esse vitae ipsa non iure adipisci, nobis, at facilis atque excepturi repudiandae sed officia.</p>
-							<button><a href="classes.html#hathayoga" target=_blank>подробнее</a></button>
+							<h3>Вибролитая плитка</h3>
+							<img src="images/vibroplitka.jpg" title="vibroplitka" alt="vibroplitka">
+							<p class="short" style="color: black;">Самый дешевый и простой вариант производства. Раствор заливают в форму и помещают на специальный стол. От вибрации масса густеет и отправляется в камеру на сушку.</p>
+							<button><a href="vidy.html" target=_blank>подробнее</a></button>
 						</div><!-- .type-->
 						<div class="type">
-							<h3>H3</h3>
-							<a href="classes.html#prenatalyoga" target=_blank><img src="img/pregnant1.jpg" title="prenatalyoga" alt="prenatalyoga"></a>
-							<p class="short">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore sunt voluptate alias tempore sit temporibus laboriosam nihil, culpa iusto nemo consectetur illum cupiditate exercitationem corrupti, voluptas veritatis facere nobis assumenda.</p>
-							<button><a href="classes.html#prenatalyoga" target=_blank>подробнее</a></button>
+							<h3>Вибропресованная плитка</h3>
+							<img src="images/vibropresovannaya.jpg" title="vibropressovanaya" alt="vibropress">
+							<p class="short" style="color: black;">Если сравнивать с предыдущим вариантом, эти изделия являются более прочными. Другая технология производства отражается на качестве готового продукта. Формы заполняют раствором и отправляют под вибропресс.</p>
+							<button><a href="vidy.html" target=_blank>подробнее</a></button>
 						</div><!-- .type-->
 						<div class="type">
-							<h3>H3</h3>
-							<a href="classes.html#kidsyoga" target=_blank><img src="img/kids-yoga1.jpg" title="kidsyoga" alt="kidsyoga"></a>
-							<p class="short">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque dignissimos dolor commodi veritatis deleniti eum accusamus eius perferendis magnam amet quis, eaque debitis, unde quibusdam quae qui officia mollitia repudiandae.</p>
-							<button><a href="classes.html#kidsyoga" target=_blank>подробнее</a></button>
+							<h3>Гиперпрессованная плитка</h3>
+							<img src="images/giperpress.jpg" title="giperpress" alt="giperpress"></a>
+							<p class="short" style="color: black;">Раствор прессуют под высоким давлением на уникальных гидропрессах. Частички бетона склеиваются. В результате получается готовый продукт, обладающий сверхпрочными характеристиками.
+							</p>
+							<button><a href="vidy.html" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="clear"></div>
 					</div><!-- .classtype -->
@@ -67,19 +67,19 @@
 			<div class="about">
 				<div class="line"></div><!-- .line -->
 				<div class="content">
-					<h2 class="dashed">H2</h2>
-					<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nemo magni. Itaque, facilis veniam excepturi at nostrum numquam adipisci architecto ab fuga, quos eaque fugiat cupiditate. Nobis amet harum id?</p>
+					<h2 class="dashed">О нас</h2>
+					<p class="description" style="color: black;" >Задача нашего производства, сделать плитку, которая прослужит более 30 лет. Для этого мы полностью отказались от бюджетного сырья, производим на дорогостоящей европейской линии и делаем повышенную марку прочности бетона.</p>
 					<div class="info">
 						<div class="type">
-							<h3 class="white">H3</h3>
-							<a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank><img src="img/stones.jpg" title="philosophy" alt="philosophy"></a>
-							<p class="short">НLorem ipsum dolor sit amet consectetur adipisicing elit. Earum, obcaecati aspernatur nihil aliquam tempore possimus repellat aliquid dolor accusantium suscipit, neque totam. Labore libero explicabo nobis vel quam dolor? Ipsum.</p>
-							<button><a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank>подробнее</a></button>
+							<h3 class="white">История компании</h3>
+							<img src="images/oNasPlitka.png" title="oNasPlitka" alt="oNasPlitka"></a>
+							<p class="short" style="color: black;">Наша Производственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
+							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="type">
-							<h3 class="white">H3</h3>
-							<a href="aboutus.html" target=_blank><img src="img/teachers.jpg" title="our team" alt="our team"></a>
-							<p class="short">H3</p>
+							<h3 class="white">Контакты</h3>
+							<img src="images/evropa.jpg" title="evropa" alt="evropa"></a>
+							<p class="short" style="color: black;">ШОУ-РУМы находятся в г .Минск, ул. Сурганова, 57Б (ТЦ ЕВРОПА), 5 этаж, оф.160 и 6 этаж, офис 186. Работаем с 9:00 до 18:00 пн-пт. Если Вы планируете приехать в шоу-рум для оплаты и заключения договора, возможен выезд дежурного специалиста по продажам в шоу-рум.</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="clear"></div>
@@ -88,59 +88,45 @@
 			</div><!-- .about -->
 			<div class="event">
 				<div class="content">
-					<h3>H3</h3>
-					<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sint dignissimos quis nihil id animi soluta iusto autem veritatis officiis. Sunt quibusdam neque quidem repudiandae excepturi laboriosam eum debitis voluptatem.</p>
-					<img src="img/ayurvedaspices1.jpg" alt="ayurveda" title="ayurveda">
-					<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugit asperiores facere ex nulla eius quod deleniti minus voluptates eligendi expedita excepturi, voluptatibus similique omnis. Praesentium velit magnam illum sint?</p>
+					<h3>Сколько лет компании?</h3>
+					<p class="short" style="color: black;">Мы производим тротуарную плитку с 2011 г. под юр. лицом ЧТПУП “Мастерстрой”. В 2021 году мы завезли на территорию Беларуси новую польскую технологию производства и запустили новый бренд GARD под отдельным юр. лицом ООО “Производственная компания Мастерстрой”.</p>
+					<img src="images/banner_bottom.jpg" alt="banner_plit" title="banner_plit">
+					<p class="short" style="color: black;">Также, благодаря отделу логистики, мы снимаем с Вас заботу о доставке и разгрузке, делаем это максимально быстро и за минимальные деньги. Звоните или оставляйте заявку на сайте, и убедитесь в этом сами.</p>
 				</div><!-- .content -->
 			</div><!-- .event -->
 			<footer>
 				<div class="line"></div><!-- .line -->
 				<div class="content">
 					<div class="shortinfo">
-						<h3 class="white">H3</h3>
-						<p>Paragraph</p> 
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, laudantium. Vel molestias sit minus aspernatur fugit tenetur veritatis nisi voluptates dolor praesentium, provident alias rem blanditiis, illo quidem repellat a.</p>
+						<h3 class="white">О нас</h3>
+						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
-						<h3 class="white">H3</h3>
-						<dl>
-							<dt>Tweet <span>@mindbody</span></dt>
-								<dd>Новое летнее расписание в йога-студии mindbody, не пропустите последних обновлений</dd>
-							<dt id="second">Tweet <span>@mindbody</span></dt>
-								<dd>Поставки товаров для профессиональных занятий йогой из Индии, дополнительная информация у администратора студии mindbody</dd>
-						</dl>
+						<h3 class="white">Реквизиты</h3>
+						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
+							УНП: 00000000<br>
+							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
+							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
+							Банк: BY43BPSB30123273720179330000</p>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
-						<p>Подпишитесь на нашу рассылку, чтобы получать новости о занятиях и семенарах регулярно!</p>
-						<form method=post action='http://www.it-academy.by/TestForm.php'>
-							<input type="text" name="e-mail" placeholder="ваш e-mail" class="borderless">
-							<button type="submit">подписаться</button>
+						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
+						<form method=post action='https://www.it-academy.by/'>
+							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit">Подписаться</button>
 						</form>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
-						<p>г. Минск, ул. Бирюзова, 11, 5-й этаж.</p>
+						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
 						<ul>
-							<li><span>Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
-							<li><span>E-mail:&nbsp; </span> <a href="mailto: folezhok@gmail.com" id="footlink">folezhok@gmail.com</a></li>
-						</ul>
-						<ul class="social">
-							<li class="tweet"><a href="#" ></a></li>
-							<li class="fb"><a href="#"></a></li>
-							<li class="google"><a href="#"></a></li>
-							<li class="linkedin"><a href="#"></a></li>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
 					</div><!-- .shortinfo -->
 					<div class="clear"></div>
 				</div><!-- .content -->		
 			</footer>	
-	
-		</div><!-- .view -->
-	
-		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="jquery.jcarousel.min.js"></script>
-		<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
